@@ -1,0 +1,3 @@
+ServerEvents.tags('item', event => {
+    event.add(`c:dusts/ender_pearl`, `kubejs:ender_pearl_dust`);    // adding custom ender pearl dust to 'forge:dusts/ender_pearl' tag.
+})
