@@ -1,0 +1,3 @@
+ServerEvents.tags('item', event => {
+    event.add(`c:dusts/wood`, `kubejs:sawdust`);    // adding custom sawdust to 'forge:dusts/wood' tag.
+})
