@@ -1,0 +1,4 @@
+ServerEvents.tags('item', event => {
+    event.add('c:ingots/andesite_alloy', 'create:andesite_alloy');
+    event.add('c:ingots/andesite_alloy', 'kubejs:stone_alloy');
+})
