@@ -58,7 +58,7 @@ chatLineSpacing:0.0
 textBackgroundOpacity:0.5
 backgroundForChatOnly:true
 hideServerAddress:false
-advancedItemTooltips:false
+advancedItemTooltips:true
 pauseOnLostFocus:true
 overrideWidth:0
 overrideHeight:0
@@ -71,7 +71,7 @@ notificationDisplayTime:1.0
 useNativeTransport:true
 mainHand:"right"
 attackIndicator:1
-tutorialStep:movement
+tutorialStep:none
 mouseWheelSensitivity:1.0
 rawMouseInput:true
 glDebugVerbosity:1
@@ -129,37 +129,37 @@ key_key.jade.show_uses:key.keyboard.keypad.4
 key_key.jade.narrate:key.keyboard.keypad.5
 key_key.jade.show_details:key.keyboard.left.shift
 key_keybind.sophisticatedstorage.sort:key.mouse.middle
-key_key.jei.previousPage:key.keyboard.unknown
-key_key.jei.recipeBack:key.keyboard.backspace
-key_key.jei.previousCategory:key.keyboard.page.up:SHIFT
-key_key.jei.copy.recipe.id:key.keyboard.unknown
-key_key.jei.transferRecipeBookmark:key.mouse.left:SHIFT
-key_key.jei.closeRecipeGui:key.keyboard.escape
-key_key.jei.showUses:key.keyboard.u
-key_key.jei.nextPage:key.keyboard.unknown
-key_key.jei.showUses2:key.mouse.right
-key_key.jei.focusSearch:key.keyboard.f:CONTROL
-key_key.jei.cheatOneItem2:key.mouse.right
-key_key.jei.bookmark:key.keyboard.a
-key_key.jei.nextSearch:key.keyboard.down
-key_key.jei.showRecipe2:key.mouse.left
-key_key.jei.previousSearch:key.keyboard.up
 key_key.jei.cheatItemStack2:key.mouse.middle
-key_key.jei.toggleOverlay:key.keyboard.o:CONTROL
-key_key.jei.cheatItemStack:key.mouse.left:SHIFT
-key_key.jei.toggleBookmarkOverlay:key.keyboard.unknown
-key_key.jei.nextCategory:key.keyboard.page.down:SHIFT
+key_key.jei.transferRecipeBookmark:key.mouse.left:SHIFT
 key_key.jei.showRecipe:key.keyboard.r
-key_key.jei.clearSearchBar:key.mouse.right
-key_key.jei.previousRecipePage:key.keyboard.page.up
-key_key.jei.toggleWildcardHideIngredient:key.mouse.right:CONTROL
+key_key.jei.nextCategory:key.keyboard.page.down:SHIFT
 key_key.jei.toggleCheatMode:key.keyboard.unknown
-key_key.jei.toggleEditMode:key.keyboard.unknown
-key_key.jei.toggleCheatModeConfigButton:key.mouse.left:CONTROL
-key_key.jei.toggleHideIngredient:key.mouse.left:CONTROL
-key_key.jei.nextRecipePage:key.keyboard.page.down
-key_key.jei.maxTransferRecipeBookmark:key.mouse.left:CONTROL
+key_key.jei.toggleBookmarkOverlay:key.keyboard.unknown
+key_key.jei.showUses:key.keyboard.u
 key_key.jei.cheatOneItem:key.mouse.left
+key_key.jei.toggleCheatModeConfigButton:key.mouse.left:CONTROL
+key_key.jei.toggleWildcardHideIngredient:key.mouse.right:CONTROL
+key_key.jei.toggleHideIngredient:key.mouse.left:CONTROL
+key_key.jei.nextPage:key.keyboard.unknown
+key_key.jei.previousRecipePage:key.keyboard.page.up
+key_key.jei.nextRecipePage:key.keyboard.page.down
+key_key.jei.toggleEditMode:key.keyboard.unknown
+key_key.jei.previousSearch:key.keyboard.up
+key_key.jei.cheatOneItem2:key.mouse.right
+key_key.jei.previousCategory:key.keyboard.page.up:SHIFT
+key_key.jei.nextSearch:key.keyboard.down
+key_key.jei.recipeBack:key.keyboard.backspace
+key_key.jei.focusSearch:key.keyboard.f:CONTROL
+key_key.jei.showRecipe2:key.mouse.left
+key_key.jei.bookmark:key.keyboard.a
+key_key.jei.clearSearchBar:key.mouse.right
+key_key.jei.maxTransferRecipeBookmark:key.mouse.left:CONTROL
+key_key.jei.cheatItemStack:key.mouse.left:SHIFT
+key_key.jei.copy.recipe.id:key.keyboard.unknown
+key_key.jei.closeRecipeGui:key.keyboard.escape
+key_key.jei.toggleOverlay:key.keyboard.o:CONTROL
+key_key.jei.showUses2:key.mouse.right
+key_key.jei.previousPage:key.keyboard.unknown
 key_key.kubejs.kubedex:key.keyboard.k
 key_ponder.keyinfo.ponder:key.keyboard.w
 key_create.keyinfo.toolmenu:key.keyboard.left.alt
