@@ -28,3 +28,4 @@ Added Visual Workbench.
 Added Waystones.
 
 Ported custom items from Infinite Horizons 1.20.1.
+Ported tag scripts from Infinite Horizons 1.20.1 (with some edits).
